Partial updates for this fix
Contains other fixes so will need to be cherry-picked later.